--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GestureKit",
-  "version": "0.0.1",
+  "version": "1.1.0",
   "description": "Cross-platform gesture recognition library for smart devices and gesture control.",
   "author": "<guille87paz@gmail.com>",
   "contributors": [
@@ -10,7 +10,7 @@
     }
   ],
   "scripts": {
-    "start": "grunt dev",
+    "start": "grunt dist",
     "test": "grunt test"
   },
   "repository": {
@@ -24,7 +24,8 @@
     "grunt-contrib-concat": "0.3.0",
     "grunt-contrib-uglify": "0.2.2",
     "browserify": "~3.24.2",
-    "grunt-browserify": "~1.3.0"
+    "grunt-browserify": "~1.3.0",
+    "grunt-contrib-jasmine": "~0.6.1"
   },
   "license": "Apache v2 license",
   "engine": "node >= 0.8.6"
