--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "GestureKit",
+  "name": "gesturekit",
   "version": "1.1.0",
-  "description": "A JavaScript library to recognize advanced gestures on web browsers.",
-  "author": "<guille87paz@gmail.com>",
-  "contributors": [
-    {
-      "name": "Guille Paz",
-      "email": "guille87paz@gmail.com"
-    }
-  ],
+  "description": "A JavaScript library to recognize gestures on web browsers.",
+  "author": "Guille Paz <guille87paz@gmail.com>",
   "scripts": {
     "start": "grunt dist",
     "test": "grunt test"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/RoamTouch/GestureKit.git"
-  },
+  "repository": "git://github.com/roamtouch/gesturekit.js",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
